--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ button {
   font-size: 1em;
   margin-top: 5px;
   border: 2px;
-  border-radius:8px;
-  transition:0.3s;
+  border-radius: 8px;
+  transition: 0.3s;
+  background: white;
 }
 
 button:hover {
