--- a/style.css
+++ b/style.css
@@ -1,15 +1,67 @@
+:root {
+  --body-bg-color: #0077bf;
+  --body-font-color: #f8f9faff;
+  --body-font-color-off: #e8e9ea;
+  --button-bg-color: white;
+  --button-bg-highlight: #28a745;
+  --footer-font-color: #eeeeee;
+  --prompt-font-color: #111111;
+  --prompt-bg-color: #ffc107;
+  --h1-font-size: 3.052rem;
+  --h2-font-size: 2.441rem;
+  --h3-font-size: 1.953rem;
+  --h4-font-size: 1.563rem;
+  --h5-font-size: 1.25rem;
+}
+
+/* type-scale */
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400');
+
+html {font-size: 100%;} /*16px*/
+
+body {
+  background: var(--body-bg-color);
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: var(--body-font-color);
+}
+
+p {margin-bottom: 1rem;}
+
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: var(--h1-font-size);
+}
+
+h2 {font-size: var(--h2-font-size);}
+h3 {font-size: var(--h3-font-size);}
+h4 {font-size: var(--h4-font-size);}
+h5 {font-size: var(--h5-font-size);}
+
+
+small, .text_small {font-size: 0.8rem;};
+
+/* type-scale end */
+
 /* mobile devices ca 2004 */
 #button_box {
   width: 100%;
   text-align: center;
-  font-size: 1.1em;
 }
 
 /* general */
 .counting {
-  font-size: small;
-  color: #e8e9ea;
+  color: var(--body-font-color-off);
   margin-top:5px;
+  text-align: center;
 }
 
 button {
@@ -19,31 +71,26 @@ button {
   border: 2px;
   border-radius: 8px;
   transition: 0.3s;
-  background: white;
+  font-size: var(--h5-font-size);
 }
 
 button:hover {
-  background:#28a745;
+  background-color: var(--button-bg-highlight);
 }
 
-body {
-  background: #0077bf;
-  color: #f8f9faff;
-}
 
-h3 {
-  font-size: x-large;
-  color: #111111;;
-  background: #ffc107;
+#prompt {
+  font-size: var(--h4-font-size);
+  color: var(--prompt-font-color);
+  background-color: var(--prompt-bg-color);
   border-radius: 8px;
   padding-left: 4px;
   padding-right: 4px;
 }
 
 footer {
-  font-size:small;
-  color:#eeeeee;
   margin-top:1px;
+  color: var(--footer-font-color);
 }
 
 a {
@@ -68,10 +115,22 @@ a:active {
 }
 
 /* desktop (& mobile devices <15 years old) */
-@media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1100px) {
   #button_box {
-    width: 500px;
-    text-align: center;
-    font-size: 1em;
+    width: 100%;
+    display: grid;
+    grid-template-areas: "b1 b2" "c c";
+  }
+
+  #button_box button {
+    width: 99%;
+  }
+
+  #count {
+    grid-area: c;
+  }
+
+  #prompt {
+    font-size: var(--h3-font-size);
   }
 }
